# AINO

./: .gitignore  README.md  main.py  model.py  neural_network.py  pyproject.toml
aino/: __init__.py  activations.py  backend.py  layer.py  model.py
playground/: XOR.py
