[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aino"
version = "1.0.2"
description = "AINO Is Neural Operation: A lightweight, educational neural network library."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Arufa", email = "radityaalfarisi6@gmail.com"}
]
keywords = ["neural-network", "machine-learning", "perceptron", "educational", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "streamlit",
    "altair",
    "streamlit-drawable-canvas",
    "opencv-python",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "scikit-learn",
    "ipykernel",
    "matplotlib",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["aino"]
