[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aino"
version = "2.1.3"
description = "AINO Is Neural Operation: A lightweight, educational neural network library."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Arufa", email = "radityaalfarisi6@gmail.com"}
]
keywords = ["neural-network", "machine-learning", "perceptron", "educational", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"] # Bisa disesuaikan dengan versi CUDA standar

[dependency-groups]
dev = [
    "pytest>=7.0",
    "scikit-learn",
    "ipykernel",
    "matplotlib",
    "pandas",
    "streamlit",
    "altair",
    "streamlit-drawable-canvas",
    "opencv-python",
]

[tool.hatch.build.targets.wheel]
packages = ["aino"]

[project.urls]
Homepage = "https://github.com/arufadesuwa/AINO"
Repository = "https://github.com/arufadesuwa/AINO.git"
"Bug Tracker" = "https://github.com/arufadesuwa/AINO/issues"